# the-untitled-cloud

./: .gitmodules  .prettierrc  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.gradle.kts  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  gradle.properties  package-lock.json  package.json  settings.gradle.kts  svelte.config.js  vite.config.ts
api/: build.gradle.kts  settings.gradle.kts
etc/: pam_pgsql.conf
etc/pam.d/: vsftpd_virtual
etc/vsftpd/: vsftpd.conf
front/: .eslintrc.cjs  README.md  package.json
front/src/: app.html  app.scss  variables.scss
front/src/params/: lang.ts
front/src/routes/: +layout.svelte  +layout.ts
front/static/: manifest.json
ftp/: .gitignore  docker-compose.yml
ftp/etc/: pam_pgsql.conf
nginx/: nginx.conf
nginx/nginxconfig.io/: proxy.conf
nginx/sites-available/: localhost.conf
src/: app.html  app.scss  claims.rs  hooks.js  list.rs  main.rs  service-worker.ts  service.rs  store.js  variables.scss
src/components/: Cart.svelte  Footer.svelte  Icons.svelte  Login.svelte  Navbar.svelte
src/locales/: en.json  fr.json
src/params/: lang.ts  uuid.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  __layout-home.svelte  __layout.svelte  checkout.svelte  checkout@home.svelte  index@home.svelte  login.svelte  login@home.svelte
src/shared/: constants.ts  helpers.ts  models.ts
src/store/: helpers.ts  store.ts
src/styles/: backdrop.scss  colors.scss  cursors.scss  error-classes.scss  separation.scss
static/: manifest.json
web-ftp/: Cargo.toml  README.md  Rocket.toml
web-ftp/src/: list.rs
(+386 files in other folders)
