[package]
name = "the-untitled-cloud-webftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8"
# If you do not need pem decoding, you can disable the default feature `use_pem` that way:
# jsonwebtoken = {version = "8", default-features = false }
serde = {version = "1.0", features = ["derive"] }
#sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["uuid"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]